Updated foreign experiments to Java 18